fixed EndpointAddress to use URI so that custom tranport can work better.